<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SorteoSimple"
    android:background="@color/background_color"
    android:id="@+id/layoutSorteoSimple">

    <TextView
        android:id="@+id/title_SorteoSimple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_SorteoSimple"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/desc_SorteoSimple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc_SorteoSimple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_SorteoSimple"
        android:textStyle="italic"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewParticipantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/control_participantes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_SorteoSimple"
        app:layout_constraintVertical_bias="0.050000012">

        <ImageButton
            android:id="@+id/btnMoreSorteoSimple"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/more24"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"/>


        <EditText
            android:id="@+id/edt_addParticipante"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:hint="Añade participante"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/btnMoreSorteoSimple"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnMoreSorteoSimple" />

        <ImageButton
            android:id="@+id/btn_AddParticipante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@color/green"
            android:src="@drawable/ic_baseline_add_24"
            app:layout_constraintBottom_toBottomOf="@id/edt_addParticipante"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/edt_addParticipante"
            app:layout_constraintTop_toBottomOf="@+id/btnMoreSorteoSimple" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupSorteoSimple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_addParticipante"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>


        <TextView
            android:id="@+id/txt_contadorParticipantes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="0 participantes disponibles"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.024"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chipGroupSorteoSimple"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtInfoNumPremios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/desc_numParticipantes"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewParticipantes" />


    <EditText
        android:id="@+id/edtNumPremios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="Nº de premios"
        android:inputType="number"
        android:textColor="@color/green"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtInfoNumPremios" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnSortear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/green"
        android:text="Sortear"
        android:textColor="@color/white"
        app:icon="@drawable/shuffle"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/snackbar_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/snackbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />







</androidx.constraintlayout.widget.ConstraintLayout>